# Email-triage-FastAPI-working-project

./: README.md  __init__.py  app.py  client.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  validate.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  my_env_environment.py
